# Model-Clean-Code-Fast-Api-with-Postgresql

./: .gitignore  docker-compose.yml  exemple.env
.devcontainer/: devcontainer.json  docker-compose.yml
fastapi-postgres-model-tdd/: .env  README.md  dockerfile  pyproject.toml  requirements.txt
fastapi-postgres-model-tdd/app/: main.py
fastapi-postgres-model-tdd/app/db/: connection.py  database.py  model.py
fastapi-postgres-model-tdd/app/routes/: image.py  medicao.py  placa.py
fastapi-postgres-model-tdd/app/schemas/: base.py  medicao.py  placa.py
fastapi-postgres-model-tdd/app/tests/: conftest.py
fastapi-postgres-model-tdd/app/tests/schemas/: placa_test.py
fastapi-postgres-model-tdd/app/tests/use_cases/: placa_use_cases_test.py
fastapi-postgres-model-tdd/app/use_cases/: medicao.py  placa.py
fastapi-postgres-model-tdd/tests/schemas/: placa.py
frontend-next/: package-lock.json
frontend-next/app/: page.tsx
frontend-next/app/template/header/: page.tsx
frontend-next/app/template/lateral_menu/: page.tsx
frontend-next/app/template/title/: title.tsx
frontend_dicover_share/: README.md  package-lock.json  package.json
frontend_dicover_share/app/: globals.css  layout.tsx  page.tsx
frontend_dicover_share/app/components/: Nav.jsx  PromptCads.jsx
